force-app/main/default/objects/Policy_Information__c/fields/FSA_c__c.field-meta.xml
<CustomField>
    <fullName>FSA_c__c</fullName>
    <defaultValue>&quot;0 - No&quot;</defaultValue>
    <inlineHelpText>Does UHC handle the Financial Products? (FSA,RRA,HRA,CERA,HIA,HSA,etc.)?</inlineHelpText>
    <label>Financial Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0 - No</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1 - Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>