force-app/main/default/objects/Policy_Information__c/fields/Fund_Type__c.field-meta.xml
<CustomField>
    <fullName>Fund_Type__c</fullName>
    <label>Fund Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>FI</fullName>
            </value>
            <value>
                <fullName>ASO &amp; FI</fullName>
            </value>
            <value>
                <fullName>FFS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>