force-app/main/default/objects/Policy_Information__c/fields/Gated_plans_2_Backend__c.field-meta.xml
<CustomField>
    <fullName>Gated_plans_2_Backend__c</fullName>
    <formula>CASE( Gated_Plans__c , &quot;Yes&quot;, $CustomMetadata.Policy_Picklist_Weightage__mdt.Gated_Plans_Yes.Weightage__c, &quot;No&quot;, $CustomMetadata.Policy_Picklist_Weightage__mdt.Gated_Plans_No.Weightage__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gated plans 2(Backend)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>