force-app/main/default/objects/Policy_Information__c/fields/Gated_Plans__c.field-meta.xml
<CustomField>
    <fullName>Gated_Plans__c</fullName>
    <description>Does this customer offer gated plans such as Nexus ACO, Navigate, Doctor’s Plans?</description>
    <inlineHelpText>Does this customer offer gated plans such as Nexus ACO, Navigate, Doctor’s Plans?</inlineHelpText>
    <label>Gated Plans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>