force-app/main/default/objects/Policy_Information__c/fields/HAC_Service_Model__c.field-meta.xml
<CustomField>
    <fullName>HAC_Service_Model__c</fullName>
    <label>HAC Service Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core Consultative</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>VHP Standard</fullName>
            </value>
            <value>
                <fullName>VHP Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>