force-app/main/default/objects/Policy_Information__c/fields/HCT_CAMS_etc__c.field-meta.xml
<CustomField>
    <fullName>HCT_CAMS_etc__c</fullName>
    <label>HCT, CAMS, etc.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cams</fullName>
            </value>
            <value>
                <fullName>HCT</fullName>
            </value>
            <value>
                <fullName>Medica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>