force-app/main/default/objects/Policy_Information__c/fields/High_Dollar__c.field-meta.xml
<CustomField>
    <fullName>High_Dollar__c</fullName>
    <label>High Dollar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M/W/F</fullName>
            </value>
            <value>
                <fullName>Exclude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>