force-app/main/default/objects/Policy_Information__c/fields/Hospital_Systems_2_Backend__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Systems_2_Backend__c</fullName>
    <formula>CASE( Hospital_Systemss__c,  &quot;0&quot;, 0 , &quot;1&quot;, 1.00 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital Systems 2(Backend)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>