force-app/main/default/objects/Policy_Information__c/fields/Hospital_Systemss__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Systemss__c</fullName>
    <defaultValue>&quot;0 - No&quot;</defaultValue>
    <inlineHelpText>Is customer a hospital system or own one?</inlineHelpText>
    <label>Hospital Systems</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0 - No</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1 - Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>