force-app/main/default/objects/Policy_Information__c/fields/Incentives_Rewards_50__c.field-meta.xml
<CustomField>
    <fullName>Incentives_Rewards_50__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Should be UHG managed incentive programs including biometric screenings, registration, health assessments, coaches, etc. Please enter actual number.</inlineHelpText>
    <label>Incentives/Rewards (.50)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>