force-app/main/default/objects/Policy_Information__c/fields/Incentives_Rewards__c.field-meta.xml
<CustomField>
    <fullName>Incentives_Rewards__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Should be UHG managed incentive programs including biometric screenings, registration, health assessments, coaches, etc. Please enter actual number.</inlineHelpText>
    <label>Incentives/Rewards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>