force-app/main/default/objects/Policy_Information__c/fields/Incentives_Rewards_Range_Backend__c.field-meta.xml
<CustomField>
    <fullName>Incentives_Rewards_Range_Backend__c</fullName>
    <formula>IF(AND( Incentives_Rewards_50__c&gt;= $CustomMetadata.Capacity_Plan_Incentives_Rewards__mdt.Range_0_0.Start_Range__c,
Incentives_Rewards_50__c&lt;= $CustomMetadata.Capacity_Plan_Incentives_Rewards__mdt.Range_0_0.End_Range__c),
$CustomMetadata.Capacity_Plan_Incentives_Rewards__mdt.Range_0_0.Weightage__c,

IF(AND( Incentives_Rewards_50__c&gt;= $CustomMetadata.Capacity_Plan_Incentives_Rewards__mdt.Range_1_2.Start_Range__c,
Incentives_Rewards_50__c&lt;= $CustomMetadata.Capacity_Plan_Incentives_Rewards__mdt.Range_1_2.End_Range__c),
$CustomMetadata.Capacity_Plan_Incentives_Rewards__mdt.Range_1_2.Weightage__c,
$CustomMetadata.Capacity_Plan_Incentives_Rewards__mdt.Range_3_more.Weightage__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incentives/Rewards Range(Backend)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>