force-app/main/default/objects/Policy_Information__c/fields/Indi_Portion_of_Case_FTE_based__c.field-meta.xml
<CustomField>
    <fullName>Indi_Portion_of_Case_FTE_based__c</fullName>
    <label>% of case(Backend)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>