force-app/main/default/objects/Policy_Information__c/fields/Indiv_Portion_of_Case_FTE_based__c.field-meta.xml
<CustomField>
    <fullName>Indiv_Portion_of_Case_FTE_based__c</fullName>
    <formula>Indi_Portion_of_Case_FTE_based__c	 * Adj_Case_FTE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indiv Portion of Case FTE based</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>