force-app/main/default/objects/Policy_Information__c/fields/Indiv_Portion_of_case_FTE_based_on_AdjCF__c.field-meta.xml
<CustomField>
    <fullName>Indiv_Portion_of_case_FTE_based_on_AdjCF__c</fullName>
    <formula>Indi_Portion_of_Case_FTE_based__c	 *   Adj_Case_FTE_for_outlierss__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indiv Portion of case FTE based-Outler</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>