force-app/main/default/objects/Policy_Information__c/fields/Internal_Customer_Layers__c.field-meta.xml
<CustomField>
    <fullName>Internal_Customer_Layers__c</fullName>
    <inlineHelpText>An internal customer layer is the number of internal individuals a SB Consultant interacts with on a regular basis. Examples include SCE, CM, Onsite Service Rep, CMC</inlineHelpText>
    <label>Internal Customer Layers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>