force-app/main/default/objects/Policy_Information__c/fields/IPM_Hours_Of_Complexity__c.field-meta.xml
<CustomField>
    <fullName>IPM_Hours_Of_Complexity__c</fullName>
    <label>IPM Hours Of Complexity</label>
    <summarizedField>IPM_Information__c.Hours_of_complexity__c</summarizedField>
    <summaryForeignKey>IPM_Information__c.Policy_Information__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>