force-app/main/default/objects/Policy_Information__c/fields/IPM_Months_Implementing__c.field-meta.xml
<CustomField>
    <fullName>IPM_Months_Implementing__c</fullName>
    <label>IPM Months Implementing</label>
    <summarizedField>IPM_Information__c.Months_implementing__c</summarizedField>
    <summaryForeignKey>IPM_Information__c.Policy_Information__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>