force-app/main/default/objects/Policy_Information__c/fields/IPM_Total_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>IPM_Total_of_Hours__c</fullName>
    <label>IPM Total of Hours</label>
    <summarizedField>IPM_Information__c.Total_of_hours__c</summarizedField>
    <summaryForeignKey>IPM_Information__c.Policy_Information__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>