force-app/main/default/objects/Policy_Information__c/fields/Is_Medical__c.field-meta.xml
<CustomField>
    <fullName>Is_Medical__c</fullName>
    <formula>IF(INCLUDES(Policy_Type__c, &quot;Medical&quot;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Medical</label>
    <type>Checkbox</type>
</CustomField>