force-app/main/default/objects/Policy_Information__c/fields/IS_UMR_or_SUREST__c.field-meta.xml
<CustomField>
    <fullName>IS_UMR_or_SUREST__c</fullName>
    <formula>OR(UMR__c,Surest__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IS UMR or SUREST</label>
    <type>Checkbox</type>
</CustomField>