force-app/main/default/objects/Policy_Information__c/fields/IsPolicyValidForSAcal2__c.field-meta.xml
<CustomField>
    <fullName>IsPolicyValidForSAcal2__c</fullName>
    <formula>IF(
    AND(
        OR(
            INCLUDES(Policy_Type__c, &apos;Dental&apos;),
            INCLUDES(Policy_Type__c, &apos;Vision&apos;),
            INCLUDES(Policy_Type__c, &apos;Accident Protection&apos;),
            INCLUDES(Policy_Type__c, &apos;Critical Illness&apos;),
            INCLUDES(Policy_Type__c, &apos;Hospital Indemnity&apos;),
            INCLUDES(Policy_Type__c, &apos;Life/Di&apos;),
            INCLUDES(Policy_Type__c, &apos;Pet&apos;),
            INCLUDES(Policy_Type__c, &apos;Flexwork&apos;) 
        ),
        ISPICKVAL(Policy_Status__c, &quot;Active&quot;)
    ),
    true,
    false
)</formula>
    <label>IsPolicyValidForSAcal2</label>
    <type>Checkbox</type>
</CustomField>