force-app/main/default/objects/Policy_Information__c/fields/IsPolicyValidForSAcal__c.field-meta.xml
<CustomField>
    <fullName>IsPolicyValidForSAcal__c</fullName>
    <formula>IF(AND(OR((INCLUDES(Policy_Type__c,&quot;Medical&quot;)), ISNULL(Policy_Type__c)), (ISPICKVAL(Policy_Status__c,&quot;Active&quot;))),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsPolicyValidForSAcal</label>
    <type>Checkbox</type>
</CustomField>