force-app/main/default/objects/Policy_Information__c/fields/Issue_updated_date__c.field-meta.xml
<CustomField>
    <fullName>Issue_updated_date__c</fullName>
    <description>This backend field will be updated when issue is created /updated/deleted/undeleted- written for Batch to calculate MERIT Volume as part of Capacity Planing enhancements</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue updated date</label>
    <type>Date</type>
</CustomField>