force-app/main/default/objects/Policy_Information__c/fields/IST_Alert__c.field-meta.xml
<CustomField>
    <fullName>IST_Alert__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IST Alert</label>
    <length>50</length>
    <type>Text</type>
</CustomField>