force-app/main/default/objects/Policy_Information__c/fields/KA_to_NA_transition_5__c.field-meta.xml
<CustomField>
    <fullName>KA_to_NA_transition_5__c</fullName>
    <inlineHelpText>6 months post effective date for cases coming from Key Accounts and/or migrating to UMR from UNET. If keeping some membership on UNET, remaining UNET policies should also get additional credit.</inlineHelpText>
    <label>KA to NA transition (.5)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - No transition</fullName>
            </value>
            <value>
                <fullName>1 - KA to NA transition</fullName>
            </value>
            <value>
                <fullName>2 - NA UNET to UMR migration</fullName>
            </value>
            <value>
                <fullName>3 - ESA UNET to UMR migration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>