force-app/main/default/objects/Policy_Information__c/fields/KA_to_NA_Transition_5_Score__c.field-meta.xml
<CustomField>
    <fullName>KA_to_NA_Transition_5_Score__c</fullName>
    <formula>CASE(
    TEXT(KA_to_NA_transition_5__c),
    &quot;0 - No transition&quot;, 0,
    &quot;1 - KA to NA transition&quot;, 1,
    &quot;2 - NA UNET to UMR migration&quot;, 2,
    &quot;3 - ESA UNET to UMR migration&quot;, 3,
    0
) * 0.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KA to NA Transition (.5) Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>