force-app/main/default/objects/Policy_Information__c/fields/KA_to_NA_Transition_Date__c.field-meta.xml
<CustomField>
    <fullName>KA_to_NA_Transition_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of transition from KA / Migration to/from UMR</inlineHelpText>
    <label>Migration Date</label>
    <type>Date</type>
</CustomField>