force-app/main/default/objects/Policy_Information__c/fields/Life__c.field-meta.xml
<CustomField>
    <fullName>Life__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <inlineHelpText>Sold by UHC as Integrated or Stand-Alone</inlineHelpText>
    <label>Life</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0 - No</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1 - Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>