force-app/main/default/objects/Policy_Information__c/fields/Life_Score_Surest__c.field-meta.xml
<CustomField>
    <fullName>Life_Score_Surest__c</fullName>
    <formula>IF(
    TEXT(Life__c) = &quot;1&quot;,
    0.15,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Life Score Surest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>