force-app/main/default/objects/Policy_Information__c/fields/Manual_Adj_Case_FTE_for_Outliers__c.field-meta.xml
<CustomField>
    <fullName>Manual_Adj_Case_FTE_for_Outliers__c</fullName>
    <description>user can manually add the value for the Adj Case FTE for Outliers. This field will use in trigger/PB to calculate &quot;Adj Case FTE for Outliers&quot;</description>
    <label>Override Adj Case FTE for Outliers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>