force-app/main/default/objects/Policy_Information__c/fields/Medica_Harvard_Pilgrim_Mercer_Health_Adv__c.field-meta.xml
<CustomField>
    <fullName>Medica_Harvard_Pilgrim_Mercer_Health_Adv__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medica-Harvard Pilgrim-Mercer Health Adv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>