force-app/main/default/objects/Policy_Information__c/fields/Medicare_Plan__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Plan__c</fullName>
    <defaultValue>&quot;0 - No&quot;</defaultValue>
    <inlineHelpText>Include Medicare plans on the UNET platform.  (Do not include Retiree Solutions plans.  Do include Medicare Advantage mirror plans as well as any Medicare supplemental plans on the UNET platform)</inlineHelpText>
    <label>Medicare Plans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0 - No</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1 - Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>