force-app/main/default/objects/Policy_Information__c/fields/Membership_Make_up__c.field-meta.xml
<CustomField>
    <fullName>Membership_Make_up__c</fullName>
    <label>Membership Make-up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - None</fullName>
                <default>true</default>
                <label>0 - None</label>
            </value>
            <value>
                <fullName>1 - Unions, Retiree, Municipality or Multiple Employers</fullName>
            </value>
            <value>
                <fullName>2 - 2 or more of the above</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>