force-app/main/default/objects/Policy_Information__c/fields/Merger_Acquisition_Divestiture_2__c.field-meta.xml
<CustomField>
    <fullName>Merger_Acquisition_Divestiture_2__c</fullName>
    <formula>IF( ISPICKVAL( Merger_Acquisition_Divestiture__c , &apos;Yes&apos;) ,  $CustomMetadata.Policy_Picklist_Weightage__mdt.CP_Merger_Acquisition_Divestiture_Yes.Weightage__c  ,  $CustomMetadata.Policy_Picklist_Weightage__mdt.CP_Merger_Acquisition_Divestiture_No.Weightage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merger/Acquisition/Divestiture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>