force-app/main/default/objects/Policy_Information__c/fields/Merger_Acquisition_Divestiture__c.field-meta.xml
<CustomField>
    <fullName>Merger_Acquisition_Divestiture__c</fullName>
    <inlineHelpText>Any merger, divestiture, or acquisition activity in
the current year that generates work for the CMC i.e. review of communication
material, off cycle enrollment, claim and/or clinical file feeds, history transfers, etc.</inlineHelpText>
    <label>Merger/Acquisition/Divestiture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>