force-app/main/default/objects/Policy_Information__c/fields/Migration_2_Backend__c.field-meta.xml
<CustomField>
    <fullName>Migration_2_Backend__c</fullName>
    <formula>CASE( Migration__c , &quot;No Transition&quot;, $CustomMetadata.Policy_Picklist_Weightage__mdt.No_Transition.Weightage__c, &quot;KA to NA Transition&quot;, $CustomMetadata.Policy_Picklist_Weightage__mdt.KA_to_NA_Transition.Weightage__c,
&quot;NA UNET to UMR&quot;, $CustomMetadata.Policy_Picklist_Weightage__mdt.NA_UNET_to_UMR.Weightage__c, &quot;ESA UNET to UMR&quot;, $CustomMetadata.Policy_Picklist_Weightage__mdt.ESA_UNET_to_UMR.Weightage__c, &quot;UMR to NA UNET&quot;, $CustomMetadata.Policy_Picklist_Weightage__mdt.UMR_to_NA_UNET.Weightage__c, &quot;UMR to ESA UNET&quot;, $CustomMetadata.Policy_Picklist_Weightage__mdt.UMR_to_ESA_UNET.Weightage__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Migration 2(Backend)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>