force-app/main/default/objects/Policy_Information__c/fields/Migration__c.field-meta.xml
<CustomField>
    <fullName>Migration__c</fullName>
    <inlineHelpText>6 months post effective date for cases coming from Key Accounts and/or migrating to/from UMR from UNET. If keeping some membership on UNET, remaining UNET policies should also get additional credit.</inlineHelpText>
    <label>Migration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Transition</fullName>
            </value>
            <value>
                <fullName>KA to NA Transition</fullName>
            </value>
            <value>
                <fullName>NA UNET to UMR</fullName>
            </value>
            <value>
                <fullName>ESA UNET to UMR</fullName>
            </value>
            <value>
                <fullName>UMR to NA UNET</fullName>
            </value>
            <value>
                <fullName>UMR to ESA UNET</fullName>
            </value>
            <value>
                <fullName>ESA UNET to UMR Migration</fullName>
                <isActive>false</isActive>
                <label>ESA UNET to UMR Migration</label>
            </value>
            <value>
                <fullName>NA UNET to UMR Migration</fullName>
                <isActive>false</isActive>
                <label>NA UNET to UMR Migration</label>
            </value>
            <value>
                <fullName>UMR to NA UNET Migration</fullName>
                <isActive>false</isActive>
                <label>UMR to NA UNET Migration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>