force-app/main/default/objects/Policy_Information__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dedicated</fullName>
            </value>
            <value>
                <fullName>Highly Designated</fullName>
            </value>
            <value>
                <fullName>Designated</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Specialty - General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>