force-app/main/default/objects/Policy_Information__c/fields/Multiple_Policy_Factor__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Policy_Factor__c</fullName>
    <formula>CASE(Multiple_Policy_Type__c,
					&quot;1 – N/A&quot;, 1,
					&quot;2 - Same AMT, Same Customer Contacts&quot;,2,
					&quot;3 – Same AMT, different Customer Contacts, similar benefits&quot;,3,
					&quot;4 – Same AMT, same Customer Contacts, same benefits&quot;,4,0
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Multiple Policy Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>