force-app/main/default/objects/Policy_Information__c/fields/Multiple_Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Policy_Type__c</fullName>
    <defaultValue>&apos;1 – N/A&apos;</defaultValue>
    <inlineHelpText>Add if Multiple Medical Policies but if split between UNET and UMR or UNET and Surest, do not pick a value.</inlineHelpText>
    <label>Multiple Policy Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 – N/A</fullName>
            </value>
            <value>
                <fullName>2 - Same AMT, Same Customer Contacts</fullName>
            </value>
            <value>
                <fullName>3 – Same AMT, different Customer Contacts, similar benefits</fullName>
            </value>
            <value>
                <fullName>4 – Same AMT, same Customer Contacts, same benefits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>