force-app/main/default/objects/Policy_Information__c/fields/NB_Exc_Date__c.field-meta.xml
<CustomField>
    <fullName>NB_Exc_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Effective date of new business.</inlineHelpText>
    <label>NB/Exc Date</label>
    <type>Date</type>
</CustomField>