force-app/main/default/objects/Policy_Information__c/fields/ne_Business_Exchange_Transition_Factor__c.field-meta.xml
<CustomField>
    <fullName>ne_Business_Exchange_Transition_Factor__c</fullName>
    <defaultValue>&quot;0 - No&quot;</defaultValue>
    <inlineHelpText>Include customers who are new to UHC as well as customers who are moving to/from private exchanges.  Credit should be valid for first year after implementation/effective date.</inlineHelpText>
    <label>New Business/Exchange Transition Factor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0 - No</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1 - Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>