force-app/main/default/objects/Policy_Information__c/fields/Network_Strategy_Development_2__c.field-meta.xml
<CustomField>
    <fullName>Network_Strategy_Development_2__c</fullName>
    <formula>IF( ISPICKVAL(  Network_Strategy_Development__c  , &apos;Yes&apos;) ,   $CustomMetadata.Policy_Picklist_Weightage__mdt.CP_Network_Strategy_Development_Yes.Weightage__c   ,  $CustomMetadata.Policy_Picklist_Weightage__mdt.CP_Network_Strategy_Development_No.Weightage__c )</formula>
    <label>Network Strategy/Development</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>