force-app/main/default/objects/Policy_Information__c/fields/Network_Strategy_Development__c.field-meta.xml
<CustomField>
    <fullName>Network_Strategy_Development__c</fullName>
    <inlineHelpText>Involvement in customer specific specialized
network strategy, projects, recruitment, customization. Excludes standard network
updates, standard communication, or basic geoaccess or disruption reporting. Example
1: work with local market leads to develop provider recruitment strategy, deployment
and tracking on behalf of a customer. Example 2: develop and manage a custom
network recruitment process managed by the CMC. Involvement of a CNL (custom
network liaison) should make this a 1.</inlineHelpText>
    <label>Network Strategy/Development</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>