force-app/main/default/objects/Policy_Information__c/fields/New_Business_Exchange_Factor_2_Backend__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Exchange_Factor_2_Backend__c</fullName>
    <formula>IF( ISPICKVAL( ne_Business_Exchange_Transition_Factor__c , &quot;1&quot;) , 0.50, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Business/Exchange Factor 2(Backend))</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>