force-app/main/default/objects/Policy_Information__c/fields/New_Product_1_st_Year_External__c.field-meta.xml
<CustomField>
    <fullName>New_Product_1_st_Year_External__c</fullName>
    <inlineHelpText>Customer specific implementation of an outside vendor product requiring account management team support and management,
first year only. After first year may move to Vendor Management category based on support and engagement required by the CMC. Low/Moderate: One or more external product implementations with an established process and minimal components/feeds/complexity. High: One or more external product implementations with an unestablished process, multiple components and a high level of complexity.</inlineHelpText>
    <label>New Product 1st Year External</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Activity</fullName>
            </value>
            <value>
                <fullName>Low/Moderate Activity</fullName>
            </value>
            <value>
                <fullName>High Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>