force-app/main/default/objects/Policy_Information__c/fields/New_Product_1st_Year_1__c.field-meta.xml
<CustomField>
    <fullName>New_Product_1st_Year_1__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>New Products refers to new product for UHG only.  Any or all of the following activities: New Products, pilots(internal or customer-specific), UHG Driven platform migration.  Do not count established products that are new to a customer.</inlineHelpText>
    <label>New Product 1st Year (1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>