force-app/main/default/objects/Policy_Information__c/fields/New_Product_1st_Year_Description__c.field-meta.xml
<CustomField>
    <fullName>New_Product_1st_Year_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Identify specific products/activities that apply to this customer.</inlineHelpText>
    <label>New Product 1st Year Description</label>
    <type>TextArea</type>
</CustomField>