force-app/main/default/objects/Policy_Information__c/fields/New_Product_1st_Year_External_2__c.field-meta.xml
<CustomField>
    <fullName>New_Product_1st_Year_External_2__c</fullName>
    <formula>IF(  ISPICKVAL( New_Product_1_st_Year_External__c , &apos;No Activity&apos;)  ,   $CustomMetadata.Policy_Picklist_Weightage__mdt.CP_New_Product_1st_Year_External_No.Weightage__c  , 

IF( ISPICKVAL( New_Product_1_st_Year_External__c , &apos;Low/Moderate Activity&apos;) ,   ($CustomMetadata.Policy_Picklist_Weightage__mdt.CP_New_Product_1st_Year_External_L_M.Weightage__c) *  1 , 

IF(ISPICKVAL( New_Product_1_st_Year_External__c , &apos;High Activity&apos;),  ( $CustomMetadata.Policy_Picklist_Weightage__mdt.CP_New_Product_1st_Year_External_High.Weightage__c) * 2 , 0) ) )</formula>
    <label>New Product 1st Year External</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>