force-app/main/default/objects/Policy_Information__c/fields/NexusACO_25__c.field-meta.xml
<CustomField>
    <fullName>NexusACO_25__c</fullName>
    <label>NexusACO (.25)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - No</fullName>
            </value>
            <value>
                <fullName>1 - Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>