force-app/main/default/objects/Policy_Information__c/fields/NexusACO_25_Score__c.field-meta.xml
<CustomField>
    <fullName>NexusACO_25_Score__c</fullName>
    <formula>CASE(
    TEXT(NexusACO_25__c),
    &quot;0 - No&quot;, 0,
    &quot;1 - Yes&quot;, 1,
    0
) * 0.25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NexusACO (.25) Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>